--- a/src/main/webapp/app/entities/postupci/list/postupci.component.html
+++ b/src/main/webapp/app/entities/postupci/list/postupci.component.html
@@ -18,45 +18,44 @@
   <fa-icon icon="plus"></fa-icon>
   <span>Novi Postupak</span>
 </button>
-  <table mat-table id="ExampleTable" [dataSource]="dataSource" matSort matSortStart="desc">
+<table mat-table id="ExampleTable" [dataSource]="dataSource" matSort matSortStart="desc">
+  <ng-container matColumnDef="sifra postupka">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Sifra Postupka</th>
+    <td mat-cell *matCellDef="let element">{{ element.sifraPostupka }}</td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
+  <ng-container matColumnDef="broj tendera">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Broj Tendera</th>
+    <td mat-cell *matCellDef="let element">{{ element.brojTendera }}</td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
 
-      <ng-container matColumnDef="sifra postupka">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Sifra Postupka</th>
-        <td mat-cell *matCellDef="let element">{{ element.sifraPostupka }}</td>
-        <td mat-footer-cell *matFooterCellDef></td>
-      </ng-container>
-      <ng-container matColumnDef="broj tendera">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Broj Tendera</th>
-        <td mat-cell *matCellDef="let element">{{ element.brojTendera }}</td>
-        <td mat-footer-cell *matFooterCellDef></td>
-      </ng-container>
+  <ng-container matColumnDef="opis postupka">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Opis Postupka</th>
+    <td mat-cell *matCellDef="let element">{{ element.opisPostupka }}</td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
+  <ng-container matColumnDef="vrsta postupka">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Vrsta Postupka</th>
+    <td mat-cell *matCellDef="let element">{{ element.vrstaPostupka }}</td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
+  <ng-container matColumnDef="datum objave">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Datum Objave</th>
+    <td mat-cell *matCellDef="let element">{{ element.datumObjave }}</td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
+  <!-- Star Column -->
+  <ng-container matColumnDef="delete" stickyEnd>
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element">
+      <mat-icon id="delete" type="submit" (click)="delete(element)">delete</mat-icon>
+    </td>
+  </ng-container>
 
-      <ng-container matColumnDef="opis postupka">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Opis Postupka</th>
-        <td mat-cell *matCellDef="let element">{{ element.opisPostupka }}</td>
-        <td mat-footer-cell *matFooterCellDef></td>
-      </ng-container>
-      <ng-container matColumnDef="vrsta postupka">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Vrsta Postupka</th>
-        <td mat-cell *matCellDef="let element">{{ element.vrstaPostupka }}</td>
-        <td mat-footer-cell *matFooterCellDef></td>
-      </ng-container>
-      <ng-container matColumnDef="datum objave">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Datum Objave</th>
-        <td mat-cell *matCellDef="let element">{{ element.datumObjave }}</td>
-        <td mat-footer-cell *matFooterCellDef></td>
-      </ng-container>
-    <!-- Star Column -->
-    <ng-container matColumnDef="delete" stickyEnd>
-      <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let element">
-        <mat-icon id="delete" type="submit" (click)="delete(postupci)">delete</mat-icon>
-      </td>
-    </ng-container>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 <!--</div>-->
