--- a/src/main/webapp/app/entities/ponude/list/ponude.component.html
+++ b/src/main/webapp/app/entities/ponude/list/ponude.component.html
@@ -7,74 +7,82 @@
 <button mat-raised-button (click)="exporter.exportTable('xlsx', { fileName: 'Ponude', sheet: 'sheet_name', Props: { Author: 'Talha' } })">
   <img src="../../../../content/images/icons8-microsoft-excel-48.png" alt="" />
 </button>
-<div class="example-container mat-elevation-z8">
-  <!--  <div>-->
-  <!--    <mat-form-field fxFlex="40%">-->
-  <!--      <input #box matInput type="text" (keyup)="doFilter(box.value)" />-->
-  <!--    </mat-form-field>-->
-  <!--  </div>-->
 
-  <table mat-table id="ExampleTable" matTableExporter [dataSource]="dataSource" matSort matSortStart="desc" #exporter="matTableExporter">
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-      <td mat-cell *matCellDef="let element">{{ element.id }}</td>
-      <td mat-footer-cell *matFooterCellDef></td>
-    </ng-container>
-    <ng-container matColumnDef="sifra postupka">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Sifra Postupka</th>
-      <td mat-cell *matCellDef="let element">{{ element.sifraPostupka }}</td>
-      <td mat-footer-cell *matFooterCellDef></td>
-    </ng-container>
-    <ng-container matColumnDef="sifra ponude">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Sifra Ponude</th>
-      <td mat-cell *matCellDef="let element">{{ element.sifraPonude }}</td>
-      <td mat-footer-cell *matFooterCellDef></td>
-    </ng-container>
-    <ng-container matColumnDef="broj partije">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Broj Partije</th>
-      <td mat-cell *matCellDef="let element">{{ element.brojPartije }}</td>
-      <td mat-footer-cell *matFooterCellDef></td>
-    </ng-container>
-    <ng-container matColumnDef="naziv ponudjaca">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Ponudjac</th>
-      <td mat-cell *matCellDef="let element">{{ element.nazivPonudjaca }}</td>
-      <td mat-footer-cell *matFooterCellDef></td>
-    </ng-container>
-    <ng-container matColumnDef="naziv proizvodjaca">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Proizvodjac</th>
-      <td mat-cell *matCellDef="let element">{{ element.nazivProizvodjaca }}</td>
-      <td mat-footer-cell *matFooterCellDef></td>
-    </ng-container>
-    <ng-container matColumnDef="zasticeni naziv">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Zasticeni Naziv</th>
-      <td mat-cell *matCellDef="let element">{{ element.zastceniNaziv }}</td>
-      <td mat-footer-cell *matFooterCellDef></td>
-    </ng-container>
-    <ng-container matColumnDef="ponudjena vrijednost">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Ponudjena Cijena</th>
-      <td mat-cell *matCellDef="let element">{{ element.ponudjenaVrijednost }}</td>
-      <td mat-footer-cell *matFooterCellDef>{{ getTotalCost() }}</td>
-    </ng-container>
-    <ng-container matColumnDef="rok isporuke">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Rok Isporuke</th>
-      <td mat-cell *matCellDef="let element">{{ element.rokIsporuke }}</td>
-      <td mat-footer-cell *matFooterCellDef></td>
-    </ng-container>
-    <!--    <ng-container matColumnDef="delete" stickyEnd>-->
-    <!--      <th mat-header-cell *matHeaderCellDef></th>-->
-    <!--      <td mat-cell *matCellDef="let element">-->
-    <!--        <mat-icon id="delete" type="submit" (click)="delete(element)">delete</mat-icon>-->
-    <!--      </td>-->
-    <!--    </ng-container>-->
-    <!--    <ng-container matColumnDef="edit" stickyEnd>-->
-    <!--      <th mat-header-cell *matHeaderCellDef></th>-->
-    <!--      <td mat-cell *matCellDef="let element">-->
-    <!--        <mat-icon id="edit" type="submit" [routerLink]="['/ponude', element.id, 'edit']">edit</mat-icon>-->
-    <!--      </td>-->
-    <!--    </ng-container>-->
-    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
-  </table>
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-</div>
+<!--  <div>-->
+<!--    <mat-form-field fxFlex="40%">-->
+<!--      <input #box matInput type="text" (keyup)="doFilter(box.value)" />-->
+<!--    </mat-form-field>-->
+<!--  </div>-->
+
+<table
+  class="example-container mat-elevation-z8"
+  mat-table
+  id="ExampleTable"
+  matTableExporter
+  [dataSource]="dataSource"
+  matSort
+  matSortStart="desc"
+  #exporter="matTableExporter"
+>
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+    <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
+  <ng-container matColumnDef="sifra postupka">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Sifra Postupka</th>
+    <td mat-cell *matCellDef="let element">{{ element.sifraPostupka }}</td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
+  <ng-container matColumnDef="sifra ponude">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Sifra Ponude</th>
+    <td mat-cell *matCellDef="let element">{{ element.sifraPonude }}</td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
+  <ng-container matColumnDef="broj partije">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Broj Partije</th>
+    <td mat-cell *matCellDef="let element">{{ element.brojPartije }}</td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
+  <ng-container matColumnDef="naziv ponudjaca">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Ponudjac</th>
+    <td mat-cell *matCellDef="let element">{{ element.nazivPonudjaca }}</td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
+  <ng-container matColumnDef="naziv proizvodjaca">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Proizvodjac</th>
+    <td mat-cell *matCellDef="let element">{{ element.nazivProizvodjaca }}</td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
+  <ng-container matColumnDef="zasticeni naziv">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Zasticeni Naziv</th>
+    <td mat-cell *matCellDef="let element">{{ element.zastceniNaziv }}</td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
+  <ng-container matColumnDef="ponudjena vrijednost">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Ponudjena Cijena</th>
+    <td mat-cell *matCellDef="let element">{{ element.ponudjenaVrijednost }}</td>
+    <td mat-footer-cell *matFooterCellDef>{{ getTotalCost() }}</td>
+  </ng-container>
+  <ng-container matColumnDef="rok isporuke">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Rok Isporuke</th>
+    <td mat-cell *matCellDef="let element">{{ element.rokIsporuke }}</td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
+  <ng-container matColumnDef="delete" stickyEnd>
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element">
+      <mat-icon id="delete" type="submit" (click)="delete(element)">delete</mat-icon>
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="edit" stickyEnd>
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element">
+      <mat-icon id="edit" type="submit" [routerLink]="['/ponude', element.id, 'edit']">edit</mat-icon>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
+<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
