--- a/src/main/webapp/app/entities/postupci/list/postupci.component.html
+++ b/src/main/webapp/app/entities/postupci/list/postupci.component.html
@@ -19,6 +19,11 @@
   <span>Novi Postupak</span>
 </button>
 <table mat-table id="ExampleTable" [dataSource]="dataSource" matSort matSortStart="desc">
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+    <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
   <ng-container matColumnDef="sifra postupka">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Sifra Postupka</th>
     <td mat-cell *matCellDef="let element">{{ element.sifraPostupka }}</td>
@@ -52,16 +57,9 @@
       <mat-icon id="delete" type="submit" (click)="delete(element)">delete</mat-icon>
     </td>
   </ng-container>
-  <ng-container matColumnDef="edit" stickyEnd>
-    <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let element">
-      <mat-icon id="edit" type="submit" [routerLink]="['/postupci', element.id, 'edit']">edit</mat-icon>
-    </td>
-  </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns" [routerLink]="['/tenderi-home', { foo: row.sifraPostupka }]"></tr>
 </table>
 
 <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-<!--</div>-->
