--- a/src/main/webapp/app/entities/specifikacije/list/specifikacije.component.html
+++ b/src/main/webapp/app/entities/specifikacije/list/specifikacije.component.html
@@ -68,8 +68,19 @@
     <td mat-cell *matCellDef="let element">{{ element.procijenjenaVrijednost }}</td>
     <td mat-footer-cell *matFooterCellDef></td>
   </ng-container>
-  <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+  <ng-container matColumnDef="delete" stickyEnd>
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element">
+      <mat-icon id="delete" type="submit" (click)="delete(element)">delete</mat-icon>
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="edit" stickyEnd>
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element">
+      <mat-icon id="edit" type="submit" [routerLink]="['/specifikacije', element.id, 'edit']">edit</mat-icon>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
 </table>
-<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
