--- a/src/main/webapp/app/entities/view-vrednovanje/list/view-vrednovanje.component.html
+++ b/src/main/webapp/app/entities/view-vrednovanje/list/view-vrednovanje.component.html
@@ -58,7 +58,7 @@
       <td mat-cell *matCellDef="let element">{{ element.zastceniNaziv }}</td>
       <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
-    <ng-container  matColumnDef="farmaceutski oblik">
+    <ng-container matColumnDef="farmaceutski oblik">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Farmaceutski oblik</th>
       <td mat-cell *matCellDef="let element">{{ element.farmaceutskiOblikLijeka }}</td>
       <td mat-footer-cell *matFooterCellDef></td>
@@ -104,17 +104,17 @@
     </ng-container>
     <ng-container matColumnDef="bod cijena">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Bod Cijena</th>
-      <td mat-cell *matCellDef="let element">{{ element.bodCijena }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.bodCijena | number: '1.2-2' }}</td>
       <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
     <ng-container matColumnDef="bod rok">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Bod Rok</th>
-      <td mat-cell *matCellDef="let element">{{ element.bodRok }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.bodRok | number: '1.2-2' }}</td>
       <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
     <ng-container matColumnDef="bod ukupno">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Bod Ukupno</th>
-      <td mat-cell *matCellDef="let element">{{ element.bodUkupno }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.bodUkupno | number: '1.2-2' }}</td>
       <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
 
