--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -4,45 +4,78 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
 
+<!--<mat-sidenav-container fullscreen>-->
+<!--  <mat-sidenav mode="side" #start #close #snav>-->
+<!--    <mat-nav-list>-->
+<!--      <a mat-list-item routerLink="/">-->
+<!--        &lt;!&ndash;        <mat-icon>library_books</mat-icon>&ndash;&gt;-->
+<!--        <span></span>-->
+<!--      </a>-->
+
+<!--      <a mat-list-item routerLink="postupci">-->
+<!--        <mat-icon>question_answer</mat-icon>-->
+<!--        <span>Postupci</span>-->
+<!--      </a>-->
+<!--    </mat-nav-list>-->
+<!--  </mat-sidenav>-->
+
+<!--  <mat-toolbar>-->
+<!--    <button class="menu" mat-icon-button (click)="snav.toggle()">-->
+<!--      <mat-icon>menu</mat-icon>-->
+<!--    </button>-->
+
+<!--    <button mat-button [matMenuTriggerFor]="testMenu">Click Me!</button>-->
+<!--    <mat-menu #testMenu="matMenu">-->
+<!--      <button mat-menu-item>Menu Item 1</button>-->
+<!--      <button mat-menu-item>Menu Item 2</button>-->
+<!--      <button mat-menu-item>Menu Item 3</button>-->
+<!--    </mat-menu>-->
+
+<!--    <div id="proba">-->
+<!--      <button [disabled]="isAuthenticated()" class="login" mat-icon-button routerLink="/login">-->
+<!--        <mat-icon>power_settings_new</mat-icon>-->
+<!--      </button>-->
+<!--      <button [disabled]="isAuthenticated()" class="login" mat-icon-button routerLink="account/register">-->
+<!--        <mat-icon>person_add</mat-icon>-->
+<!--      </button>-->
+
+<!--      <button [disabled]="!isAuthenticated()" class="logout" mat-icon-button (click)="logout()">-->
+<!--        <mat-icon>exit_to_app</mat-icon>-->
+<!--      </button>-->
+<!--    </div>-->
+<!--  </mat-toolbar>-->
+
 <mat-sidenav-container fullscreen>
-  <mat-sidenav mode="side" #start #close #snav>
+  <mat-sidenav mode="side" #snav #start>
     <mat-nav-list>
       <a mat-list-item routerLink="/">
-        <!--        <mat-icon>library_books</mat-icon>-->
-        <span></span>
+        <span>Montefarm ESJN</span>
       </a>
 
       <a mat-list-item routerLink="postupci">
         <mat-icon>question_answer</mat-icon>
         <span>Postupci</span>
       </a>
+      <a mat-list-item routerLink="account/register">
+        <mat-icon>person_add</mat-icon>
+        <span>Registruj se </span>
+      </a>
+
+      <a mat-list-item routerLink="login">
+        <mat-icon>account_circle</mat-icon>
+        <span>Prijavi se </span>
+      </a>
+      <a mat-list-item (click)="logout()">
+        <mat-icon>logout</mat-icon>
+        <span>Odjavi se</span>
+      </a>
     </mat-nav-list>
   </mat-sidenav>
 
-  <mat-toolbar>
-    <button class="menu" mat-icon-button (click)="snav.toggle()">
+  <mat-toolbar color="primary">
+    <button mat-icon-button (click)="snav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
-
-    <button mat-button [matMenuTriggerFor]="testMenu">Click Me!</button>
-    <mat-menu #testMenu="matMenu">
-      <button mat-menu-item>Menu Item 1</button>
-      <button mat-menu-item>Menu Item 2</button>
-      <button mat-menu-item>Menu Item 3</button>
-    </mat-menu>
-
-    <div id="proba">
-      <button [disabled]="isAuthenticated()" class="login" mat-icon-button routerLink="/login">
-        <mat-icon>power_settings_new</mat-icon>
-      </button>
-      <button [disabled]="isAuthenticated()" class="login" mat-icon-button routerLink="account/register">
-        <mat-icon>person_add</mat-icon>
-      </button>
-
-      <button [disabled]="!isAuthenticated()" class="logout" mat-icon-button (click)="logout()">
-        <mat-icon>exit_to_app</mat-icon>
-      </button>
-    </div>
   </mat-toolbar>
 
   <div class="main">
