--- a/src/main/webapp/app/entities/ponude/list/ponude.component.html
+++ b/src/main/webapp/app/entities/ponude/list/ponude.component.html
@@ -74,7 +74,7 @@
     </ng-container>
     <ng-container matColumnDef="ponudjena vrijednost">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Ponudjena Cijena</th>
-      <td mat-cell *matCellDef="let element">{{ element.ponudjenaVrijednost }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.ponudjenaVrijednost | number: '1.2-2' }}</td>
       <td mat-footer-cell *matFooterCellDef>{{ ukupnaPonudjena | number: '1.2-2' }}</td>
     </ng-container>
     <ng-container matColumnDef="rok isporuke">
